--- a/Case Study/Back-End/flight-search/pom.xml
+++ b/Case Study/Back-End/flight-search/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.cg.casestudy</groupId>
-	<artifactId>flight-search-service</artifactId>
+	<artifactId>flight-search</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>flight-search-service</name>
 	<description>Demo project for Spring Boot</description>
@@ -21,17 +21,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-		
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency>
 
 		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
-			<scope>runtime</scope>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-mongodb</artifactId>
 		</dependency>
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
